@@ -1,3 +1,10 @@
+2020-01-06  Frank Ch. Eigler  <fche@redhat.com>
+
+	* Makefile.am: Create a build-time header with lsb/uname info.
+	* debuginfod-client.c: Pass above as additional User-Agent request header.
+	* debuginfod.cxx (conninfo): Print this and X-Forwarded-For, as per
+	apache httpd reverse-proxy chain.
+
 2019-12-31  Frank Ch. Eigler  <fche@redhat.com>
 
 	* debuginfod.cxx: Rework threading model.
